# ocr-pipeline

./: .gitignore  README.md  eval.py  infer.sh  inference.py  llm_infer.sh  llm_inference.py  preprocess.py  preprocess.sh  pyproject.toml  renaissance_ocr_pipeline.ipynb  sources.txt
logs/: train_3210145.err  train_3210145.out  train_3210146.err  train_3210146.out  train_3210147.err  train_3210147.out  train_3210148.err  train_3210148.out
